# ultraapi

./: CONTRIBUTING.md  Cargo.toml  README.en.md  README.ja.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_gap.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: compatibility-matrix.md  graphql.md  jwt.ja.md  jwt.md  release-notes-template.md  sqlx.md  templates.md
examples/graphql-example/: Cargo.toml
examples/graphql-example/src/: main.rs
examples/grpc-example/: Cargo.toml
examples/grpc-example/src/: main.rs
examples/hayai-example/: Cargo.toml
examples/hayai-example/src/: main.rs
examples/sqlx-example/: Cargo.toml  README.md
examples/sqlx-example/src/: main.rs
examples/ultraapi-cli/: Cargo.toml
examples/ultraapi-cli/src/: main.rs
examples/ultraapi-example/: Cargo.toml
examples/ultraapi-example/src/: main.rs
hayai-macros/src/: lib.rs
hayai/src/: background_tasks.rs  lib.rs  openapi.rs
hayai/tests/: auth_e2e_tests.rs  e2e_tests.rs  integration_tests.rs
ultraapi/: Cargo.toml
ultraapi-macros/: Cargo.toml
ultraapi-macros/src/: lib.rs
ultraapi/assets/: scalar.min.css  scalar.min.js
ultraapi/src/: background_tasks.rs  graphql.rs  grpc.rs  lib.rs  lifespan.rs  middleware.rs  openapi.rs  response_tasks.rs  session.rs  streaming.rs  templates.rs  test_client.rs
ultraapi/tests/: app_mount_static_templates_tests.rs  background_tasks_tests.rs  basic_auth_tests.rs  callable_dependency_tests.rs  compile_fail_tests.rs  compression_tests.rs  dependency_behavior_tests.rs  dependency_scope_tests.rs  depends_tests.rs  discriminated_union_tests.rs  e2e_tests.rs  exception_handler_tests.rs  external_docs_macro_tests.rs  extractor_tests.rs  file_uploads_tests.rs  graphql_tests.rs  gzip_middleware_tests.rs  http_method_macros_tests.rs  in_process_test_client_tests.rs  integration_tests.rs  io_schema_separation_tests.rs  jwt_guide_sample_tests.rs  lifespan_integration_tests.rs  macro_runtime_tests.rs  oauth2_dependency_tests.rs  oauth2_production_components_tests.rs  openapi_callbacks_attribute_tests.rs  openapi_fastapi_parity_tests.rs  openapi_modeling_tests.rs  openapi_webhooks_app_definition_tests.rs  query_validation_tests.rs  rate_limiting_tests.rs  redoc_ui_tests.rs  request_scope_tests.rs  response_cache_tests.rs  response_class_tests.rs  response_cookies_tests.rs  response_modeling_tests.rs  security_openapi_oauth_tests.rs  security_tests.rs  (+7 more)
ultraapi/tests/golden/: openapi_fastapi_parity.json
ultraapi/tests/ui/: compile_fail_cookie_extractor.rs  compile_fail_cookie_extractor.stderr  compile_fail_header_extractor.rs  compile_fail_header_extractor.stderr  response_model_parser_invalid_bool.rs  response_model_parser_invalid_bool.stderr  response_model_parser_invalid_selector_syntax.rs  response_model_parser_invalid_selector_syntax.stderr  response_model_parser_invalid_unknown_option.rs  response_model_parser_invalid_unknown_option.stderr  response_model_parser_pass.rs
