[package]
name = "ultraapi"
version = "0.1.0"
edition = "2021"

[dependencies]
ultraapi-macros = { path = "../ultraapi-macros" }
axum = { version = "0.8", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
inventory = "0.3"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
