[package]
name = "ultraapi"
version = "0.1.0"
edition = "2021"
description = "A FastAPI-inspired Rust web framework with automatic OpenAPI generation"
license = "MIT"
repository = "https://github.com/sylph-labs/ultraapi"
keywords = ["axum", "fastapi", "openapi", "web", "async"]
categories = ["asynchronous", "web-programming", "api-bindings"]

[dependencies]
ultraapi-macros = { version = "0.1.0", path = "../ultraapi-macros" }
axum = { version = "0.8", features = ["json", "form", "multipart", "ws", "query"] }
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
inventory = "0.3"
regex = "1"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
bytes = "1"
http-body = "1"
tokio-stream = "0.1"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "catch-panic", "compression-br", "compression-gzip"] }
parking_lot = "0.12"
minijinja = { version = "2", features = ["loader"] }
time = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli"] }
trybuild = "1"
tempfile = "3"
flate2 = "1"
