[package]
name = "ultraapi-cli"
version = "0.1.0"
edition = "2021"
description = "UltraAPI CLI - Run and develop UltraAPI applications"
license = "MIT"

[[bin]]
name = "ultraapi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
